--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@
 
 #login-form {
   padding: 20px 0px;
-  width: 70%;
+  width: 670px;
   display: flex;
   flex-direction: column;
   justify-content: center;
